# rust-cross-mobile

./: .gitignore  Cargo.toml  build.rs  diesel.toml  package.json  readme.md  uniffi.toml
app/android/jk-core-question-example/: settings.gradle
app/android/jk-core-question-example/app/: build.gradle
app/android/jk-core-question-example/app/src/main/: AndroidManifest.xml
app/android/jk-core-question-example/app/src/main/assets/: car.db
app/android/jk-core-question-example/gradle/: libs.versions.toml
app/android/jk-core-question-example/lib/: build.gradle
app/ios/jk-core-question-example/JkCoreQuestion/RustFramework.xcframework/: Info.plist
app/ios/jk-core-question-example/JkCoreQuestion/Sources/JkCoreQuestion/: wrapper.swift
app/ios/jk-core-question-example/jk-core-question-example/: ContentView.swift  jk_core_question_exampleApp.swift
app/ios/jk-core-question-example/jk-core-question-example.xcodeproj/: project.pbxproj
app/ohos/jk_core_question_example/: .gitignore  build-profile.json5
app/ohos/jk_core_question_example/AppScope/: app.json5
app/ohos/jk_core_question_example/AppScope/sign/default/: mcoh_app_default.cer  mcoh_keystore.p12  mcoh_profile_default.p7b  mcoh_profile_jisu.p7b  mcoh_profile_moto.p7b  mcoh_profile_smart.p7b
app/ohos/jk_core_question_example/entry/: oh-package-lock.json5  oh-package.json5
app/ohos/jk_core_question_example/jk_core_question/: oh-package-lock.json5  oh-package.json5
app/ohos/jk_core_question_example/jk_core_question/src/main/: module.json5
app/ohos/jk_core_question_example/jk_core_question/types/: oh-package.json5
example/: node.js
example/android/jk-core-question-example/gradle/: libs.versions.toml
example/android/jk-core-question-example/gradle/wrapper/: gradle-wrapper.properties
example/android/jk-core-question-example/lib/: build.gradle
example/ohos/jk_core_question_example/: .gitignore
example/ohos/jk_core_question_example/AppScope/: app.json5
example/ohos/jk_core_question_example/entry/: oh-package-lock.json5  oh-package.json5
ports/android/: build.gradle  settings.gradle
ports/android/gradle/: libs.versions.toml
ports/android/uniffi/jk_core_question/: jk_core_question.kt
ports/ios/: jk_core_question.swift  jk_core_questionFFI.h  jk_core_questionFFI.modulemap
ports/ios/JkCoreQuestion/: Package.swift
ports/ohos/: index.ets  oh-package.json5
ports/ohos/src/main/: module.json5
ports/ohos/types/: index.d.ts
scripts/: build-android.sh  build-ios.sh  build-ohos.sh
src/: lib.rs
src/db/: mod.rs  models.rs  question_db.rs  schema.rs
src/exports/: jni.rs  mod.rs  node.rs
(+20 files in other folders)
