[package]
name = "jk-core-question"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
diesel = { version = "2.1.6", features = ["sqlite", "64-column-tables"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1" }
jni-utils = "0.1.1"

[target.'cfg(any(target_env = "ohos", target_os="macos"))'.dependencies]
napi = { version = "2.16.6" }
napi-derive = { version = "2.16.4" }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = { version = "0.5.1" }

[build-dependencies]
napi-build = { version = "2.1.3" }
