[package]
name = "jk-core-question"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "uniffi_bindgen"

[lib]
crate-type = ["staticlib", "cdylib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(ffi_uniffi)', 'cfg(ffi_napi)'] }

[dependencies]
diesel = { version = "2.1.6", features = ["sqlite", "64-column-tables"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
uniffi = { version = "0.28.0", features = ["cli"] }

[target.'cfg(not(target_env="ohos"))'.dependencies]
napi-derive = { version = "2.16.4", features = ["noop"] }

[target.'cfg(target_env="ohos")'.dependencies]
napi = { version = "2.16.6" }
napi-derive = { version = "2.16.4", features = ["full"] }
