[package]
name = "jk-core-question"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "uniffi_bindgen"

[lib]
crate-type = ["staticlib", "cdylib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(ffi_uniffi)',
    'cfg(ffi_napi)',
] }

[profile.release]
strip = true
lto = true
opt-level = "z"
# codegen-units = 1
# panic = "abort"

[dependencies]
diesel = { version = "2.1.6", features = ["sqlite", "64-column-tables"] }
uniffi = { version = "0.28.0", features = ["cli", "tokio"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os="ios")'.dependencies]
libsqlite3-sys = { version = "0.28.0" }

[target.'cfg(not(target_os="ios"))'.dependencies]
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }

[target.'cfg(not(target_env="ohos"))'.dependencies]
napi-derive = { version = "2.16.4", features = ["noop"] }

[target.'cfg(target_env="ohos")'.dependencies]
napi = { version = "2.16.6", features = ["async"] }
napi-derive = { version = "2.16.4", features = ["full"] }

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.0" }
once_cell = "1.19.0"
